--- a/XSTREAM__i0.9_g1_m5_L20_out_3.html
+++ b/XSTREAM__i0.9_g1_m5_L20_out_3.html
@@ -1,4 +1,9 @@
-<HTML><HEAD><TITLE>Tandem Repeat Proteins</TITLE><STYLE TYPE="text/css">
+<HTML>
+  <HEAD>
+    <TITLE>
+      Tandem Repeat Proteins
+    </TITLE>
+    <STYLE TYPE="text/css">
 <!--
 PRE
 {
@@ -7,11 +12,20 @@ font-size : 13;
 line-height: 123%;
 }
 -->
-</STYLE></HEAD><BODY bgcolor="#B0C4DE" text="#000000"><BR><BR><CENTER><img src="logoforXSTREAM.jpg"></CENTER><BR><PRE><CENTER>XSTREAM 1.73</CENTER></PRE><PRE><CENTER><BR>Variable Sequence Tandem Repeats Extraction & Architecture Modeling<BR></CENTER></PRE><PRE><Center><BR>If you use XSTREAM for your research, please cite:<BR></CENTER></PRE><PRE><CENTER><BR>Newman AM, Cooper JB. BMC Bioinformatics 2007, 8:382</CENTER>
+</STYLE>
+  </HEAD>
+  
+  <BODY bgcolor="#B0C4DE" text="#000000"><BR><BR>
+    <CENTER><img src="logoforXSTREAM.jpg"></CENTER><BR>
+     <PRE><CENTER>XSTREAM 1.73</CENTER></PRE>
+      <PRE><CENTER><BR>Variable Sequence Tandem Repeats Extraction & Architecture Modeling<BR></CENTER></PRE>
+        <PRE><Center><BR>If you use XSTREAM for your research, please cite:<BR></CENTER></PRE>
+          <PRE><CENTER><BR>Newman AM, Cooper JB. BMC Bioinformatics 2007, 8:382</CENTER></PRE>
 
 <CENTER>File: 
 
-Sequence Index</CENTER>
+Sequence Index
+            </CENTER>
 
 
 >jgi|Altal1|924128|e_gw1.1.2197.1<A NAME="1"></A><FONT COLOR="FF0000"> |Sequence 1, Length: 334, </FONT><A HREF="http://www.ncbi.nlm.nih.gov/BLAST/">BLAST</A>
@@ -172,4 +186,8 @@ APVADPIEARATTSSAVKTSSAAATIKTSSAVAAVTSKTSSAAAVVSSKASSVVVVASSKASSVVVAVSS
 KASSVVVAVSSKASSAVVTTSTAAPLLGVNVGGSSSPLVGVKLSSSTLLAVVVGSGSTSTTAAASTITAA
 PTGTAATASTALPSTFSAPVQGQGVLSLNNLPAMPGVIDKTFSGVLGAAYGLMSGACDSSYRCNITVAGS
 ISNLLVDGNNYQTASSVAAWCDGGRCYGAATVPVTATAPFIITCDQLSGTQACSATISGAANAIFTNGQS
-VELWGWATPAGYCQNGVCTASITAVGDPMY*</PRE></BODY></HTML>
+VELWGWATPAGYCQNGVCTASITAVGDPMY*
+
+ </PRE>
+  </BODY>
+   </HTML>
