--- a/XSTREAM__i0.9_g1_m5_L20_out_3.html
+++ b/XSTREAM__i0.9_g1_m5_L20_out_3.html
@@ -11,6 +11,7 @@ Sequence Index
             </CENTER>
 
       <BODY>
+      <PRE>
 
 >jgi|Altal1|924128|e_gw1.1.2197.1<A NAME="1"></A><FONT COLOR="FF0000"> |Sequence 1, Length: 334, </FONT><A HREF="http://www.ncbi.nlm.nih.gov/BLAST/">BLAST</A>
 APFAQAGNQQQQQGAQTGNQQQQQQQGATNTPTGLGAGIQNGQTPTANDLATAVSNWMADTSMVSNFLNT
